--- a/app/src/main/res/layout/activity_company_info.xml
+++ b/app/src/main/res/layout/activity_company_info.xml
@@ -7,13 +7,20 @@
     tools:context="com.example.ast.teleafya.Ui.Pharmacy_Ui.CompanyInfo">
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listCompany"
         android:layout_marginLeft="5dp"
         android:paddingBottom="20dp"
-        android:layout_marginTop="60dp"
-        ></ListView>
+        android:layout_marginTop="40dp"
+        >
+
+
+
+
+    </ListView>
+
+
 
 
 
