--- a/app/src/main/res/layout/activity_add_new_method_mpesa.xml
+++ b/app/src/main/res/layout/activity_add_new_method_mpesa.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.ast.teleafya.Ui.Pharmacy_Ui.AddNewMethod">
+    tools:context="com.example.ast.teleafya.Ui.Pharmacy_Ui.AddNewMethod_mpesa">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,15 +16,14 @@
         android:background="@mipmap/profile_bg">
 
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/back"
-            android:layout_marginLeft="20dp"
-            android:layout_gravity="center"
-            android:id="@+id/back"
-
-            />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/back"
+                    android:layout_marginLeft="20dp"
+                    android:layout_gravity="center"
+                    android:id="@+id/back"
+                    />
 
         <TextView
             android:layout_width="match_parent"
@@ -63,8 +64,9 @@
             android:paddingRight="10dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp"
             android:id="@+id/bankDetails"
+
+            android:layout_marginRight="10dp"
             android:textColor="@color/colorWhite"
             />
         <Button
@@ -72,11 +74,11 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:text="M-PESA"
-            android:id="@+id/mpesaDetails"
             android:paddingLeft="10dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:paddingRight="10dp"
+            android:id="@+id/mpesaDetails"
 
             android:layout_marginLeft="10dp"
             android:textColor="@color/colorWhite"
