--- a/app/src/main/res/layout/custom_account_info.xml
+++ b/app/src/main/res/layout/custom_account_info.xml
@@ -50,7 +50,7 @@
             android:layout_marginTop="15dp"
             android:id="@+id/BankName"
             android:layout_below="@id/bankImage"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorText"
             android:layout_centerHorizontal="true"
             />
 
@@ -83,6 +83,7 @@
             android:layout_below="@id/BankAdd2"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
+            android:id="@+id/Activeimg"
             android:src="@mipmap/active_sel_"
             />
 
@@ -95,11 +96,24 @@
 
 
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/Activeimg"
+            android:background="#D3D3D3"/>
+
+
+
+
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/BankAdd2"
             android:layout_marginTop="80dp"
+            android:paddingTop="10dp"
+            android:weightSum="3"
+            android:paddingBottom="10dp"
             android:id="@+id/tabl1"
             android:layout_centerHorizontal="true"
                     >
@@ -112,15 +126,18 @@
                         android:id="@+id/table1"
                         android:layout_width="match_parent"
                         android:gravity="center"
+
                         android:layout_height="wrap_content"
                         >
 
                     <TextView
                             android:id="@+id/text1"
                         android:layout_column="1"
+                        android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Account Holder"
+                        android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:textSize="12dp"
 
@@ -131,6 +148,7 @@
                         <TextView
                             android:id="@+id/text2"
                             android:layout_column="1"
+                            android:layout_weight="1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Account Number"
@@ -146,6 +164,7 @@
                         <TextView
                             android:id="@+id/text3"
                             android:layout_column="1"
+                            android:layout_weight="1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
@@ -174,7 +193,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Arvind Patel"
-                    android:textColor="@color/colorPrimary"
+                    android:layout_weight="1"
+                    android:textColor="@color/colorText"
                     android:layout_gravity="center"
                     android:textSize="12dp"
 
@@ -188,7 +208,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="84758693125"
-                    android:textColor="@color/colorPrimary"
+                    android:layout_weight="1"
+                    android:textColor="@color/colorText"
                     android:layout_gravity="center"
                     android:textSize="12dp"
 
@@ -204,7 +225,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="458793"
-                    android:textColor="@color/colorPrimary"
+                    android:layout_weight="1"
+                    android:textColor="@color/colorText"
                     android:textSize="12dp"
 
 
@@ -219,7 +241,11 @@
                 <!--android:layout_marginTop="10dp"-->
                 <!--android:layout_height="1dp"  />-->
 
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="20dp"
+                android:background="#D3D3D3"/>
 
 
 
@@ -227,7 +253,7 @@
                 android:id="@+id/table3"
                 android:layout_width="match_parent"
                 android:gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_height="wrap_content"
                 >
 
@@ -238,6 +264,7 @@
                     android:layout_height="wrap_content"
                     android:text="Swift Code"
                     android:gravity="center"
+                    android:layout_weight="1"
                     android:layout_marginRight="10dp"
                     android:textSize="12dp"
 
@@ -252,6 +279,7 @@
                     android:layout_height="wrap_content"
                     android:text="IFSC Code"
                     android:gravity="center"
+                    android:layout_weight="1"
                     android:layout_marginRight="10dp"
                     android:layout_marginLeft="10dp"
                     android:textSize="12dp"
@@ -268,6 +296,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:text="Branch"
+                    android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="12dp"
 
@@ -290,10 +319,11 @@
                 <TextView
                     android:id="@+id/text10"
                     android:layout_column="1"
+                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Arvind Patel"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorText"
                     android:layout_gravity="center"
                     android:textSize="12dp"
 
@@ -307,7 +337,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="CHE452361"
-                    android:textColor="@color/colorPrimary"
+                    android:layout_weight="1"
+                    android:textColor="@color/colorText"
                     android:layout_gravity="center"
                     android:textSize="12dp"
 
@@ -322,8 +353,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:text="Chakala Andheri"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorText"
                     android:textSize="12dp"
 
 
@@ -386,7 +418,7 @@
                 android:layout_marginTop="15dp"
                 android:id="@+id/BankName2"
                 android:layout_below="@id/bankImage2"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorText"
                 android:layout_centerHorizontal="true"
                 />
 
@@ -401,10 +433,20 @@
                 />
 
 
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/imgActive2"
+                android:background="#D3D3D3"/>
+
+
+
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_below="@id/imgActive2">
 
                 <TableRow
@@ -446,6 +488,8 @@
 
 
 
+
+
                 </TableRow>
 
                 <TableRow
@@ -464,7 +508,7 @@
                         android:layout_height="wrap_content"
                         android:text="Arvind Patel"
                         android:layout_weight="2"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/colorText"
                         android:layout_gravity="center"
                         android:textSize="12dp"
 
@@ -478,19 +522,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="84758693125"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/colorText"
                         android:layout_gravity="center"
-                        android:textSize="12dp"
+                        android:textSize="12dp"/>
 
 
-                        />
-
-
-
-
-
-
-                        />
 
 
 
@@ -501,6 +537,15 @@
 
 
             </TableLayout>
+
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/imgActive2"
+                android:background="#D3D3D3"/>
 
 
         </RelativeLayout>
