--- a/app/src/main/res/layout/new_method_custom.xml
+++ b/app/src/main/res/layout/new_method_custom.xml
@@ -35,11 +35,16 @@
                 android:layout_height="wrap_content"
                 android:text="Account Holder"
                 android:id="@+id/AccHolderName"
-                android:textColor="@color/colorPrimary"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:layout_marginTop="20dp"
+                android:textColor="@color/colorText"                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_marginTop="10dp"
 
                 />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="#D3D3D3"/>
 
 
         </LinearLayout>
@@ -53,7 +58,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Account Holder"
+                android:text="Account Number"
                 android:id="@+id/AccNumber"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:layout_marginTop="20dp"
@@ -63,13 +68,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Account Holder"
+                android:text="Account Number"
                 android:id="@+id/AccNumber2"
-                android:textColor="@color/colorPrimary"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:layout_marginTop="20dp"
+                android:textColor="@color/colorText"                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_marginTop="10dp"
 
                 />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="#D3D3D3"/>
 
 
         </LinearLayout>
@@ -84,7 +94,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Account Holder"
+                android:text="BANK"
                 android:id="@+id/BankName"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:layout_marginTop="20dp"
@@ -94,14 +104,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Account Holder"
+                android:text="BANK"
                 android:id="@+id/BankName2"
-                android:textColor="@color/colorPrimary"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:layout_marginTop="20dp"
+                android:textColor="@color/colorText"                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_marginTop="10dp"
 
                 />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="#D3D3D3"/>
 
         </LinearLayout>
 
@@ -115,7 +129,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Account Holder"
+                android:text="BRANCH"
                 android:id="@+id/BranchName"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:layout_marginTop="20dp"
@@ -125,13 +139,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Account Holder"
+                android:text="BRANCH"
                 android:id="@+id/BranchName2"
-                android:textColor="@color/colorPrimary"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:layout_marginTop="20dp"
+                android:textColor="@color/colorText"                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_marginTop="10dp"
 
                 />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="#D3D3D3"/>
 
 
         </LinearLayout>
@@ -146,7 +164,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Account Holder"
+                android:text="BENEFICIARY ADDRESS"
                 android:id="@+id/BeneAdd"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:layout_marginTop="20dp"
@@ -156,13 +174,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Account Holder"
+                android:text="BENEFICIARY ADDRESS"
                 android:id="@+id/BeneAdd2"
-                android:textColor="@color/colorPrimary"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:layout_marginTop="20dp"
+                android:textColor="@color/colorText"                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_marginTop="10dp"
 
                 />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="#D3D3D3"/>
 
 
         </LinearLayout>
@@ -201,12 +223,17 @@
                     android:layout_height="wrap_content"
                     android:text="SWIFT CODE"
                     android:id="@+id/SwifCode"
-                    android:textColor="@color/colorPrimary"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/colorText"                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
 
                     />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="85dp"
+                android:background="#D3D3D3"/>
 
 
             <LinearLayout
@@ -230,10 +257,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="SWIFT CODE"
+                    android:text="UNIQUE CODE"
                     android:id="@+id/uniquecode"
-                    android:textColor="@color/colorPrimary"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/colorText"                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
 
                     />
 
