--- a/app/src/main/res/layout/new_method_footer.xml
+++ b/app/src/main/res/layout/new_method_footer.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:paddingBottom="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:paddingTop="10dp"
-        android:background="@color/colorWhite">
+        android:paddingBottom="10dp"
+        android:background="@color/colorWhite"
 
+        >
 
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add New Method"
+            android:text="SAVE ACCOUNT INFORMATION"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:id="@+id/AddNewMethod"
-            android:textColor="@color/colorWhite"
-           android:layout_centerHorizontal="true"
-            android:background="@color/colorPrimary"
-            />
-    </RelativeLayout>
 
-</RelativeLayout>
+            />
+
+    </RelativeLayout>
+</LinearLayout>
